# BLE-Macro-Keyboard

./: Báo cáo đồ án 2.docx  LiquidCrystal.cpp  LiquidCrystal.h  README.md
main/: CMakeLists.txt  button.h  lcd.c  lcd.h  main.c
main/ulp/: adc.S  config.h
